<resources>
    <string name="app_name">Feedback Form</string>
    <string name="startbtn">Let\'s Get Started!</string>
    <string name="intro1">Do you have feedback?</string>
    <string name="termsAndCond"><![CDATA[By proceeding, I agree to the T&C]]></string>
    <string name="btn_submit1">Submit</string>
    <string name="text_email1">Email:</string>
    <string name="txt_phone">Phone:</string>
    <string name="txt_name1">Full Name:</string>
    <string name="text_dept">Department:</string>
    <string name="txt_year">Year of Study:</string>
    <string name="txt_fb">Enter your feedback:</string>
    <string name="txt_rate">How much would you rate the event?</string>
    <string name="txt_thankyou">Thank you for completing your feedback on \nKanmani Discord Bot!</string>
    <string name="btn_homepage">Return Home</string>
    <string name="btn_kanmani_website">Kanmani\'s Website</string>
    <string name="btn_kanmani_topgg">Bot on Top.gg</string>
    <string name="btn_kanmani_supportserver">GitHub Repo</string>
    <string name="txt_avgText">Avg Rating: </string>
</resources>