<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A9C7CFFF"
    tools:context=".FeedbackFormActivity">

    <EditText
        android:id="@+id/user_name1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:ems="10"
        android:hint="John Doe"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/user_phone1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.371"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.681" />

    <EditText
        android:id="@+id/user_phone1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:ems="10"
        android:hint="9*********"
        android:inputType="phone"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/text_email1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.371"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.917" />

    <EditText
        android:id="@+id/user_email1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="j*****@email.com"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.371"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.408" />

    <Button
        android:id="@+id/btn_submit1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#6460D1"
        android:text="@string/btn_submit1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.881"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <TextView
        android:id="@+id/text_email1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/text_email1"
        android:textColor="#292929"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.363" />

    <TextView
        android:id="@+id/txt_name1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_name1"
        android:textColor="#292929"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/user_name1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.206"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txt_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_phone"
        android:textColor="#292929"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/user_phone1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.192"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name1"
        app:layout_constraintVertical_bias="0.555" />

    <Spinner
        android:id="@+id/spinner_department"
        android:layout_width="193dp"
        android:layout_height="48dp"
        android:layout_marginTop="17dp"
        android:entries="@array/dept_array_values"
        android:spinnerMode="dropdown"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.412"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.543" />

    <TextView
        android:id="@+id/txt_dept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_dept"
        android:textColor="#292929"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.232"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.484" />

    <RadioGroup
        android:id="@+id/rad_year"
        android:layout_width="185dp"
        android:layout_height="196dp"
        android:checkedButton="@id/rad_One"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.398"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9">

        <RadioButton
            android:id="@+id/rad_One"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="First Year"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rad_Two"
            android:layout_width="match_parent"
            android:layout_height="48dp"

            android:text="Second Year"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rad_Three"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="Third Year"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rad_Four"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="Fourth Year"
            android:textSize="16sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/txt_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_year"
        android:textColor="#292929"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.233"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.627" />

</androidx.constraintlayout.widget.ConstraintLayout>